# Layers_memory

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  DEVLOG.md  HISTORY.md  LICENSE.md  README.md  SECURITY.md
.github/workflows/: security.yml
config/: README.md  llm.example.toml
crates/godot_adapter/: Cargo.toml
crates/godot_adapter/src/: lib.rs
crates/memory_engine/: Cargo.toml
crates/memory_engine/src/: README.md  archive.rs  config.rs  core_store.rs  engine.rs  error.rs  event.rs  fidelity.rs  file_storage.rs  forgetting.rs  journal.rs  lib.rs  llm.rs  manifest.rs  prompt_view.rs  recall.rs  reflection.rs  session.rs  sleep.rs  storage.rs  tasks.rs  types.rs  vector.rs
crates/memory_engine/src/engine/: context_budget.rs  core_context.rs  fidelity_flow.rs  forgetting_flow.rs  options.rs  recall_api.rs  recall_stage1.rs  reflection_flow.rs  session_ops.rs  sleep_driver.rs  sleep_flow.rs  validation.rs  vector_flow.rs
crates/memory_engine/tests/: concurrency_stress.rs  contracts_serialization.rs  engine_forgetting.rs  engine_ingest.rs  engine_multi_speaker.rs  engine_reflection.rs  engine_sleep_recall.rs  engine_vectors.rs  living_memory_cycle.rs
crates/python_adapter/: Cargo.toml  README.md  pyproject.toml
crates/python_adapter/examples/: host_llm_config.py
crates/python_adapter/src/: lib.rs
crates/python_adapter/tests/: test_basic.py
docs/: architecture.md  audit-2026-06-10.md  chibigochi-llm-bridge.md  contracts.md  licensing.md  llm-integration-resources.md  local-development.md  roadmap.md  strategy.md  v0.1-acceptance.md  v0.3-acceptance.md
docs/research/: agentic-architectures.md  contextual-memory-expansion-2026-07-05.md  memory-time-perception-2026-07-02.md  multi-speaker-geometry-2026-06-12.md  (+2 more)
memory/: README.md
prompts/: README.md  compact_memory_pass.md  forget_review_pass.md  memory_fidelity_pass.md  memory_unit_pass.md  reflection_analyze.md  sleep_compression.md  sleep_consolidator.md  sleep_emotional_pass.md  sleep_personal_signal_pass.md  sleep_relational_pass.md  sleep_topic_thread_pass.md  telegram_chat_system.md
src/: README.md  archive.rs  core_store.rs  engine.rs  file_storage.rs  lib.rs  recall.rs  storage.rs  tasks.rs  types.rs
tests/: contracts_serialization.rs  engine_ingest.rs  engine_sleep_recall.rs
tools/: check_wiki_links.py
wiki/: AGENTS.md  README.md  index.md  log.md
(+53 files in other folders)
