[workspace]
members = [
    "crates/memory_engine",
    "crates/godot_adapter",
    "crates/python_adapter",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
