[package]
name = "godot_adapter"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "Godot GDExtension adapter for Memory Engine"

[lib]
name = "memory_engine_godot"
crate-type = ["cdylib", "rlib"]

[dependencies]
godot = "0.5.3"
memory_engine = { path = "../memory_engine" }
serde = { workspace = true }
serde_json = { workspace = true }
